[gd_scene load_steps=28 format=2]

[ext_resource path="res://cenas/hitbox.tscn" type="PackedScene" id=1]
[ext_resource path="res://personagens/inimigoSkel.gd" type="Script" id=2]
[ext_resource path="res://arte/inimigoSkel/Death/Skeleton enemy_death_4.png" type="Texture" id=3]
[ext_resource path="res://arte/inimigoSkel/Walk/Skeleton enemy_walk_1.png" type="Texture" id=4]
[ext_resource path="res://arte/inimigoSkel/Walk/Skeleton enemy_walk_3.png" type="Texture" id=5]
[ext_resource path="res://arte/inimigoSkel/Walk/Skeleton enemy_walk_5.png" type="Texture" id=6]
[ext_resource path="res://arte/inimigoSkel/Walk/Skeleton enemy_walk_6.png" type="Texture" id=7]
[ext_resource path="res://arte/inimigoSkel/Death/Skeleton enemy_death_8.png" type="Texture" id=8]
[ext_resource path="res://arte/inimigoSkel/Walk/Skeleton enemy_walk_7.png" type="Texture" id=9]
[ext_resource path="res://arte/inimigoSkel/Walk/Skeleton enemy_walk_8.png" type="Texture" id=10]
[ext_resource path="res://arte/inimigoSkel/Death/Skeleton enemy_death_13.png" type="Texture" id=11]
[ext_resource path="res://arte/inimigoSkel/Death/Skeleton enemy_death_12.png" type="Texture" id=12]
[ext_resource path="res://arte/inimigoSkel/Walk/Skeleton enemy_walk_2.png" type="Texture" id=13]
[ext_resource path="res://arte/inimigoSkel/Walk/Skeleton enemy_walk_4.png" type="Texture" id=14]
[ext_resource path="res://arte/inimigoSkel/Death/Skeleton enemy_death_10.png" type="Texture" id=15]
[ext_resource path="res://arte/inimigoSkel/Death/Skeleton enemy_death_11.png" type="Texture" id=16]
[ext_resource path="res://arte/inimigoSkel/Death/Skeleton enemy_death_3.png" type="Texture" id=17]
[ext_resource path="res://arte/inimigoSkel/Death/Skeleton enemy_death_7.png" type="Texture" id=18]
[ext_resource path="res://arte/inimigoSkel/Death/Skeleton enemy_death_6.png" type="Texture" id=19]
[ext_resource path="res://arte/inimigoSkel/Death/Skeleton enemy_death_1.png" type="Texture" id=20]
[ext_resource path="res://arte/inimigoSkel/Death/Skeleton enemy_death_5.png" type="Texture" id=21]
[ext_resource path="res://arte/inimigoSkel/Death/Skeleton enemy_death_2.png" type="Texture" id=22]
[ext_resource path="res://arte/inimigoSkel/Walk/Skeleton enemy_walk_11.png" type="Texture" id=23]
[ext_resource path="res://arte/inimigoSkel/Walk/Skeleton enemy_walk_10.png" type="Texture" id=24]
[ext_resource path="res://arte/inimigoSkel/Walk/Skeleton enemy_walk_9.png" type="Texture" id=25]

[sub_resource type="SpriteFrames" id=58]
animations = [ {
"frames": [ ExtResource( 20 ), ExtResource( 22 ), ExtResource( 17 ), ExtResource( 3 ), ExtResource( 21 ), ExtResource( 19 ), ExtResource( 18 ), ExtResource( 8 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 12 ), ExtResource( 11 ) ],
"loop": true,
"name": "Death",
"speed": 8.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 13 ), ExtResource( 5 ), ExtResource( 14 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 25 ), ExtResource( 24 ), ExtResource( 23 ) ],
"loop": true,
"name": "Walk",
"speed": 7.0
} ]

[sub_resource type="CapsuleShape2D" id=59]
radius = 12.0
height = 8.0

[node name="inimigoSkel" type="KinematicBody2D"]
position = Vector2( 220, 262 )
collision_layer = 2
collision_mask = 9
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 58 )
animation = "Walk"
frame = 2
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 3 )
shape = SubResource( 59 )

[node name="ray_wall" type="RayCast2D" parent="."]
position = Vector2( 0, 8 )
enabled = true
cast_to = Vector2( 27, 0 )
collision_mask = 8
collide_with_areas = true

[node name="hitbox" parent="ray_wall" instance=ExtResource( 1 )]
modulate = Color( 0.945098, 1, 0, 1 )
position = Vector2( 0, -27 )

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="body_entered" from="ray_wall/hitbox" to="." method="_on_hitbox_body_entered"]
